--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  
+  <div class="header">
+    <h1>Books Library</h1>
+  </div>
+
+  <div class="card-container">
+  </div>
+
   <script src="code.js"></script>
 </body>
 </html>
