style for cards and render for the books

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <h1>Books Library</h1>
   </div>
 
-  <div class="card-container">
-  </div>
+  <div class="card-container"></div>
 
   <script src="code.js"></script>
 </body>
