--- a/index.html
+++ b/index.html
@@ -9,7 +9,22 @@
 <body>
   <div class="header">
     <h1>Books Library</h1>
+    <button class="add-book">New Book</button>
   </div>
+
+  <dialog class="modal">
+    <p>Add a new book</p>
+    <form method="dialog">
+      <input type="text" id="title" placeholder="Title" required>
+      <input type="text" id="author" placeholder="Author" required>
+      <input type="number" id="pages" placeholder="Pages" required>
+      <div class="checkbox-container">
+        <label for="read">¿Read?</label>
+        <input type="checkbox" id="read">
+      </div>
+      <button type="submit" id="new-book">Add</button>
+    </form>
+  </dialog>
 
   <div class="card-container"></div>
 
