--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="header">
-    <h1>Books Library</h1>
+    <h1>Library</h1>
     <button class="add-book">New Book</button>
   </div>
 
